--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "version": "0.1.0",
   "name": "platzi-next",
-  "author": "@jonalvarezz",
-  "private": true,
+  "author": "@Maorguez",
   "description": "",
   "main": "index.js",
   "license": "MIT",
